# Mokka

./: CMakeLists.txt  mokka.steer  mokka_with_VTX_5_layer_options.steer  mokka_with_VTX_double_layer_options.steer  mokka_with_VTX_options.steer
MarlinPackages/CGAInit/: cga.steer
MarlinPackages/CGAInit/include/: CGAInitProcessor.h
MarlinPackages/CGAInit/src/: CGAInitProcessor.cc  GNUmakefile
MarlinPackages/CGAUsage/: cga.steer  env.sh
MarlinPackages/CGAUsage/include/: CGAUsageProcessor.h
MarlinPackages/CGAUsage/src/: CGAUsageProcessor.cc  GNUmakefile
MySQLMacros/CLIC/: insert_CLIC_ILD_CDR500.sql  insert_FieldMap4TeslaNoQuad.sql  insert_clic500tubex01.sql  insert_clic500vxd.sql
MySQLMacros/ILD/: ftd08.sql  ftd09.sql
ReleaseNotes/: release_notes_mokka-00-02  release_notes_mokka-00-03  release_notes_mokka-00-04  release_notes_mokka-00-05  release_notes_mokka-00-06  release_notes_mokka-00-07  release_notes_mokka-00-08  release_notes_mokka-01-00  release_notes_mokka-01-01  release_notes_mokka-01-02  release_notes_mokka-01-03  release_notes_mokka-01-04  release_notes_mokka-01-05  release_notes_mokka-02-00  release_notes_mokka-02-01  release_notes_mokka-02-01a  release_notes_mokka-02-01b  release_notes_mokka-02-02  release_notes_mokka-02-03  release_notes_mokka-03-00  release_notes_mokka-03-01  release_notes_mokka-03-02  release_notes_mokka-03-03  release_notes_mokka-03-04  release_notes_mokka-04-00  release_notes_mokka-04-01  release_notes_mokka-04-02  release_notes_mokka-05-00  release_notes_mokka-05-01  release_notes_mokka-05-02  release_notes_mokka-05-03  release_notes_mokka-05-04  release_notes_mokka-05-05  release_notes_mokka-06-00  release_notes_mokka-06-01  release_notes_mokka-06-02  release_notes_mokka-06-03  release_notes_mokka-06-03-p01  release_notes_mokka-06-03-p02  release_notes_mokka-06-04  (+42 more)
doc/CGADoc/: CGAC-C++.html  CGAFortran.html  CGAIndex.html  CGAJava.html
doc/Kernel/: geometry_drivers.html  index.html
doc/doxygen/: GNUmakefile  headerFile  mokka_doxygen.conf
examples/CGA/: Ex01.c  Ex02.f  Ex03.java  Ex04.cc  Ex05.java  Ex06.f  Ex07.cc  GNUmakefile  README.html
macros/: vis  vispi  visproto
source/: GNUmakefile
source/Geometry/CGA/: GNUmakefile  GNUmakefile.libpack
source/Geometry/CGA/include/: CGAGeometryEnvironment.hh  CGAGeometryManager.hh  CGASteppingAction.hh  Encoder32.hh  Encoder32Fcal.hh  Encoder32Hcal.hh  Encoder64.hh  Encoder64Muon.hh  EncoderSi.hh  EncoderTB.hh  MyPlacement.hh  MySQLWrapper.hh  TPCHit.hh  TRKFTDHit.hh  TRKHit.hh  VSubDetectorDriver.hh  VSuperSubDetectorDriver.hh
source/Geometry/CGA/src/: CGABeamOn.cc  CGACellIndex.cc  CGAFieldCalculations.cc  CGAGeometryEnvironment.cc  CGAGeometryManager.cc  CGAGetCellId.cc  CGAGetSteps.cc  CGAGetVolumeData.cc  CGAInit.cc  CGAPointProperties.cc  CGASetSD.cc  CGASetTBConfigAngle.cc  CGASteppingAction.cc  CGAUtils.cc  CGAWhereAMI.cc  CalHit.cc  Encoder32.cc  Encoder32Fcal.cc  Encoder32Hcal.cc  Encoder64.cc  Encoder64Muon.cc  EncoderSi.cc  EncoderTB.cc  MyPlacement.cc  MySQLWrapper.cc  PrimaryContribution.cc  TPCHit.cc  TRKFTDHit.cc  TRKHit.cc  VSubDetectorDriver.cc  VSuperSubDetectorDriver.cc
source/Geometry/Calice/: GNUmakefile
source/Geometry/Calice/include/: HcalRPC.hh  Hodoscope00.hh  HodoscopeSD00.hh  Proto00.hh  Proto01.hh  Proto02.hh  Proto03.hh  Proto04.hh  Proto04_01.hh  Proto04_02.hh  Proto05.hh  ProtoSD.hh  ProtoSD03.hh  ProtoSD03_01.hh  SD02.hh
source/Geometry/Calice/src/: HcalRPC.cc  (+14 more)
source/Geometry/EUTelescope/: GNUmakefile
source/Geometry/LDC/: GNUmakefile
source/Geometry/MokkaGear/: GNUmakefile
source/Geometry/SiD/: GNUmakefile
source/Geometry/SiLC/: GNUmakefile  SiLCModel.pro  SiLCMokka.pro
source/Geometry/Tesla/: GNUmakefile
source/Geometry/Tmag/: GNUmakefile
source/Geometry/tbeam/: GNUmakefile
source/Geometry/workshop/: GNUmakefile
source/Kernel/: GNUmakefile  GNUmakefile.common  Mokka.cc
source/Kernel/include/: Control.hh  ControlMessenger.hh  DummyPhysicsList.hh  EventAction.hh  ExtraParticles.hh  GPSGenerator.hh  GuineaPigInterface.hh  HepLCIOInterface.hh  HepLCIOInterfaceNew.hh  InputFileGenerator.hh  LCAscHepRdr.h  ParticleGunGenerator.hh  ParticleGunMessenger.hh  PhysicsListFactory.hh  PhysicsListUserLimits.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  RunManager.hh  StackingAction.hh  SteppingAction.hh  SteppingActionMessenger.hh  TPCStepLimiterLowPt.hh  TrackingAction.hh  Trajectory.hh  UserInit.hh  UserTrackInformation.hh  VPrimaryGenerator.hh  Visu.hh  VisuMessenger.hh  lHEPEvtInterface.hh  lStdHep.hh
source/Kernel/src/: Control.cc  ControlMessenger.cc  DummyPhysicsList.cc  EventAction.cc  ExtraParticles.cc  GPSGenerator.cc  GuineaPigInterface.cc  HepLCIOInterface.cc  HepLCIOInterfaceNew.cc  InputFileGenerator.cc  LCAscHepRdr.cc  ParticleGunGenerator.cc  ParticleGunMessenger.cc  PhysicsListFactory.cc  PhysicsListUserLimits.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunManager.cc  StackingAction.cc  SteppingAction.cc  SteppingActionMessenger.cc  TPCStepLimiterLowPt.cc  TrackSummary.cc  TrackingAction.cc  Trajectory.cc  UserInit.cc  UserTrackInformation.cc  Visu.cc  VisuMessenger.cc  lHEPEvtInterface.cc  lStdHep.cc  lXDR.cc
source/Plugin/Checkplots/: GNUmakefile  aida_env.sh
source/Plugin/JDoePlugin/: GNUmakefile  Readme
source/Plugin/LogPlugin/: GNUmakefile  Readme
source/Plugin/MagPlugin/: GNUmakefile  Readme
source/Plugin/MarkerPlugin/: GNUmakefile  Readme
source/Plugin/MaterialPlugin/: GNUmakefile  Readme
source/Plugin/OverlapPlugin/: GNUmakefile  Readme
source/Plugin/Pi0Tracker/: GNUmakefile
source/Plugin/PluginManager/: GNUmakefile
source/Plugin/RandomPlugin/: GNUmakefile  Readme
source/Plugin/ShowerDecomposition/: GNUmakefile
source/Plugin/TrackingOnlyPlugin/: GNUmakefile
source/TrackingPhysicsList/: GNUmakefile
source/TrackingPhysicsList/include/: TrackingPhysicsList.hh
source/TrackingPhysicsList/src/: TrackingPhysicsList.cc
source/test/: test1.sh  test1.sh.ref  test1.str  zqq_newformat.HEPEvt  zqq_newformat.slcio_ref
(+584 files in other folders)
